--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "@testing-library/user-event": "^12.0.11",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1"
+    "react-scripts": "3.4.1",
+    "styled-components": "^5.3.1"
   },
   "scripts": {
     "start": "react-scripts start",
